Debug styling issues with game grid on smaller screen displays

--- a/styles.css
+++ b/styles.css
@@ -29,6 +29,7 @@ main {
   align-items: center;
   width: 50vw;
   margin-top: 5vh;
+  margin-bottom: 5vh;
   border: solid red 1px;
 }
 
@@ -40,6 +41,8 @@ article {
   display: flex;
   justify-content: center;
   align-items: center;
+  width: 15vw;
+  height: 15vw;
   border-right: solid black 5px;
   border-bottom: solid black 5px;
 
@@ -49,8 +52,8 @@ article {
 .game-board {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  width: 40vw;
-  height: 40vw;
+  width: 45vw;
+  height: 45vw;
   margin-top: 10vh;
 
 }
@@ -77,11 +80,10 @@ article:nth-child(9) {
 }
 
 @media only screen and (max-width: 700px) {
-  /* with media screens of at most 650px, do this */
   body {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr 5fr;
+    grid-template-rows: 1fr 4fr;
     width: 100vw;
     height: 100vh;
   }
@@ -96,8 +98,13 @@ article:nth-child(9) {
     justify-self: center;
   }
 
+  article {
+    width: 25vw;
+    height: 25vw;
+  }
+
   .game-board {
-    width: 70vw;
-    height: 70vw;
+    width: 75vw;
+    height: 75vw;
   }
 }
